--- a/views/login.html
+++ b/views/login.html
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+    <script scr="https://sistema-turnos-8fi4.onrender.com/socket.io/socket.io.js"></script>
 <script defer src="/login/script.js"></script>
 </body>
 </html>
