--- a/views/modulo.html
+++ b/views/modulo.html
@@ -43,6 +43,8 @@
       </div>
     </div>
   </div>
+
+  <script src="/socket.io/socket.io.js"></script>
   <!-- ✅ Aseguramos la carga de Bootstrap JS antes de tu script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script defer src="/modulos/script.js"></script>
